# zipvoice-rs

./: .gitignore  AGENTS.md  BUILDING.md  Cargo.toml  README.md
.github/workflows/: c-api-release.yml
crates/llama-rs-sys/: Cargo.toml  build.rs  wrapper.h
crates/llama-rs-sys/src/: lib.rs
crates/zipvoice-capi/: Cargo.toml  cbindgen.toml
crates/zipvoice-capi/include/: zipvoice.h
crates/zipvoice-capi/src/: lib.rs
examples/: basic.rs  basic_espeak.rs  basic_hebrew_text.rs  reconstruct_vocos.rs
python/zipvoice/: README.md  pyproject.toml
python/zipvoice-rs/: BUILDING.md  README.md  pyproject.toml
python/zipvoice-rs/examples/: basic_english.py  basic_hebrew.py  basic_hebrew_phonemize.py
python/zipvoice-rs/scripts/: build_wheels.py
python/zipvoice/examples/: basic_english.py  basic_hebrew.py  basic_hebrew_phonemize.py
python/zipvoice/src/zipvoice/: __init__.py  models.py
src/: audio.rs  gguf.rs  lib.rs  vocos.rs
src/zipvoice/: audio.rs  flow_matching.rs  mod.rs  model.rs  text_encoder.rs  tokenizer.rs
tools/: convert_vocos.py  convert_zipvoice.py
